# portfolio-gradient-noise-boyandy2905.github.io

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
app_resources/web/: index_shell.html
assets/: imgui_starter.ini
assets/D01HelloQuad/: 01_hello_quad.frag  01_hello_quad.vert
assets/D02ProceduralMeshes/: fill_3d.frag  fill_3d.vert  texture_3d.frag  texture_3d.vert
assets/D05ShadowMapping/: fill_3d.frag  fill_3d.vert  shadows.frag  shadows.vert  view_depth.frag  view_depth.vert  write_depth.frag
assets/D06ValueNoise/: simple.frag  simple.vert
assets/D07GradientNoise/: gen_gradient_noise.frag  gen_gradient_noise.vert  simple.frag  simple.vert  surface.vert
cmake/: CachedFetchContent.cmake  CompilerWarnings.cmake  Dependencies.cmake  StandardProjectSettings.cmake
cmake/dependencies/: DearImGUI.cmake  GLEW.cmake  GLM.cmake  GSL.cmake  OpenGL.cmake  SDL2.cmake  STB.cmake
docs/: DevEnvironment.md
scripts/: scan_build_project.py
source/: CMakeLists.txt  main.cpp
source/assets/: Path.cpp  Reloader.cpp  Reloader.hpp
source/demos/: D01HelloQuad.cpp  D01HelloQuad.hpp  D02ProceduralMeshes.cpp  D02ProceduralMeshes.hpp  D05ShadowMapping.cpp  D05ShadowMapping.hpp  D06ValueNoise.cpp  D06ValueNoise.hpp  D07GradientNoise.cpp  D07GradientNoise.hpp  DemosFactory.cpp  DemosFactory.hpp
source/graphics/: Camera.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp
source/graphics/noise/: Fade.hpp  Interpolation.hpp  NoiseCoordinate.hpp  PeriodDimension.hpp  PermutationHash.hpp  ValueNoise.hpp
source/opengl/: Environment.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GL.cpp  GL.hpp  Handle.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
source/util/: Directory.cpp  Directory.hpp  Environment.hpp  FPS.hpp  JobSystem.cpp  JobSystem.hpp  Logger.cpp  Logger.hpp  Timer.hpp  WatchFiles.cpp  WatchFiles.hpp
source/window/: Application.cpp  Application.hpp  Environment.hpp  ImGuiHelper.cpp  ImGuiHelper.hpp  Settings.cpp  Settings.hpp  Title.hpp
source/window/input/: Environment.hpp  SDLInput.cpp  SDLInput.hpp
